cmake_minimum_required(VERSION 3.6)
set(CMAKE_C_STANDARD 11)

# Singly Linked List
project(SinglyLinkedList_function_test)
add_executable(SingleLinkedList_function_test Linner_Structure/SinglyLinkedList/test/function_test.c Linner_Structure/SinglyLinkedList/SinglyLinkedList.c Linner_Structure/SinglyCircularList/test/function_test.c)
project(SinglyLinkedList_memory_test)
add_executable(SingleLinkedList_memory_test Linner_Structure/SinglyLinkedList/test/memory_test.c Linner_Structure/SinglyLinkedList/SinglyLinkedList.c)

# Doubly Linked List
project(DoublyLinkedList_memory_test)
add_executable(DoublyLinkedList_memory_test Linner_Structure/DoublyLinkedList/DoublyLinkedList.c Linner_Structure/DoublyLinkedList/test/function_test.c Linner_Structure/SinglyCircularList/test/function_test.c)

# Singly Circular Linked List
project(SinglyCircularList_function_test)
add_executable(SinglyCircularList_function_test Linner_Structure/SinglyCircularList/SinglyCircularList.c Linner_Structure/SinglyCircularList/test/function_test.c)

# Doubly Circular Linked List
project(DoublyCircularList_function_test)